@startuml
circle Predicate

interface FlipFlopPredicate<T> {
    + {abstract} boolean state()
'    + {static}  FlipFlopPredicate flipFlop(Predicate, Predicate)
'    + {static}  FlipFlopPredicate lazyFlipFlop(Predicate, Predicate)
}
abstract class AbstractFlipFlop<T> {
    ~Predicate<T> lhs
    ~Predicate<T> rhs
    ~boolean state
    +boolean state()
}
class FlipFlop<T> {
    +test(T)
}
class LazyFlipFlop<T> {
    +test(T)
}
FlipFlopPredicate - Predicate
FlipFlopPredicate <|.. AbstractFlipFlop
AbstractFlipFlop <|-- FlipFlop
AbstractFlipFlop <|-- LazyFlipFlop
@enduml
